@@ -49,6 +49,7 @@ Configuration::Configuration()
 	pattern_font_x = 9;
 	pattern_font_y = 12;
 	pattern_draw_empty_data = TRUE;
+	draw_mac_index = TRUE;
 	strcpy(generator_fontface,"Tahoma");
 	generator_font_point = 90;
 	strcpy(effect_fontface,"Tahoma");
@@ -755,6 +756,8 @@ Configuration::Read()
 
 	numData = sizeof(pattern_draw_empty_data);
 	reg.QueryValue("pattern_draw_empty_data", &type, (BYTE*)&pattern_draw_empty_data, &numData);
+	numData = sizeof(draw_mac_index);
+	reg.QueryValue("draw_mac_index", &type, (BYTE*)&draw_mac_index, &numData);
 
 	numData = sizeof(generator_fontface);
 	reg.QueryValue("generator_fontface", &type, (BYTE*)&generator_fontface, &numData);
@@ -1147,6 +1150,7 @@ Configuration::Write()
 	reg.SetValue("pattern_font_x", REG_DWORD, (BYTE*)&pattern_font_x, sizeof(pattern_font_x));	
 	reg.SetValue("pattern_font_y", REG_DWORD, (BYTE*)&pattern_font_y, sizeof(pattern_font_y));	
 	reg.SetValue("pattern_draw_empty_data", REG_DWORD, (BYTE*)&pattern_draw_empty_data, sizeof(pattern_draw_empty_data));	
+	reg.SetValue("draw_mac_index", REG_DWORD, (BYTE*)&draw_mac_index, sizeof(draw_mac_index));	
 
 	reg.SetValue("pattern_header_skin", REG_SZ, (BYTE*)pattern_header_skin, strlen(pattern_header_skin));
 
