@@ -58,7 +58,7 @@ Class46=CWaveOutDialog
 Class47=CWavFileDlg
 Class48=CWireDlg
 
-ResourceCount=266
+ResourceCount=347
 Resource1=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource2=IDR_POPUPMENU (Neutral (Default))
 Resource3=IDD_SAVEWAVDLG (Unknown language: 0x3
@@ -68,7 +68,7 @@ Resource6=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource7=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource8=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource9=IDD_SAVEWAVDLG (Unknown language: 0x3
-Resource10=IDR_MACHINEFRAME (Neutral (Default))
+Resource10=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource11=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource12=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource13=IDD_SAVEWAVDLG (Unknown language: 0x3
@@ -257,7 +257,7 @@ Resource195=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource196=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource197=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource198=IDD_SAVEWAVDLG (Unknown language: 0x3
-Resource199=IDR_WAVEFRAME (Neutral (Default))
+Resource199=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource200=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource201=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource202=IDD_SAVEWAVDLG (Unknown language: 0x3
@@ -283,48 +283,129 @@ Resource221=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource222=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource223=IDD_SAVEWAVDLG (Unknown language: 0x3
 Resource224=IDD_SAVEWAVDLG (Unknown language: 0x3
-Resource225=IDD_NEW_VOLUME
-Resource226=IDD_PROGRESS_DIALOG
-Resource227=IDD_PSYBAR (Neutral (Default))
-Resource228=IDD_PSYBAR2 (Neutral (Default))
-Resource229=IDD_WAVEOUTCONFIG (Neutral (Default))
-Resource230=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource231=IDD_INFO (Neutral (Default))
-Resource232=IDD_WIREDIALOG (Neutral (Default))
-Resource233=IDD_GEARDISTORT (Neutral (Default))
-Resource234=IDD_MACPROP (Neutral (Default))
-Resource235=IDD_PATDLG (Neutral (Default))
-Resource236=IDD_INSTRUMENT (Neutral (Default))
-Resource237=IDD_GEAR_TRACKER (Neutral (Default))
-Resource238=IDD_GEAR_DELAY (Neutral (Default))
-Resource239=IDD_ENVDIALOG (Neutral (Default))
-Resource240=IDD_GEAR_FILTER (Neutral (Default))
-Resource241=IDD_GREETS (Neutral (Default))
-Resource242=IDD_SKIN (Neutral (Default))
-Resource243=IDD_SONGPROP (Neutral (Default))
-Resource244=IDD_GEAR_GAINER (Neutral (Default))
-Resource245=IDD_GEAR_FLANGER (Neutral (Default))
-Resource246=IDD_MASTERDLG (Neutral (Default))
-Resource247=IDD_NEWVAL (Neutral (Default))
-Resource248=IDD_VSTRACK (Neutral (Default))
-Resource249=IDD_PRESETS (Neutral (Default))
-Resource250=IDD_MIDI_MONITOR (Neutral (Default))
-Resource251=IDD_KEYCONFIG (Neutral (Default))
-Resource252=IDD_NEWMACHINE (Neutral (Default))
-Resource253=IDD_ABOUTBOX (Neutral (Default))
-Resource254=IDD_SEQUENCER (Neutral (Default))
-Resource255=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource256=IDD_OUTPUT (Neutral (Default))
-Resource257=IDD_DIRECTORIES (Neutral (Default))
-Resource258=IDD_CONFIGURATION (Neutral (Default))
-Resource259=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource260=IDD_INST_EDITOR (Neutral (Default))
-Resource261=IDD_MIDI_INPUT (Neutral (Default))
-Resource262=IDD_MIDI_LEARN (Neutral (Default))
-Resource263=IDD_SWINGFILL (Neutral (Default))
-Resource264=IDD_PORTAUDIO_ASIO_CONFIG (Neutral (Default))
-Resource265=IDD_GEAR_RACK (Neutral (Default))
-Resource266=IDR_MAINFRAME (Neutral (Default))
+Resource225=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource226=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource227=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource228=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource229=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource230=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource231=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource232=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource233=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource234=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource235=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource236=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource237=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource238=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource239=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource240=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource241=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource242=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource243=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource244=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource245=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource246=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource247=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource248=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource249=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource250=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource251=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource252=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource253=IDR_WAVEFRAME (Neutral (Default))
+Resource254=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource255=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource256=IDR_MACHINEFRAME (Neutral (Default))
+Resource257=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource258=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource259=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource260=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource261=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource262=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource263=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource264=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource265=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource266=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource267=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource268=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource269=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource270=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource271=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource272=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource273=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource274=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource275=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource276=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource277=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource278=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource279=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource280=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource281=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource282=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource283=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource284=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource285=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource286=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource287=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource288=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource289=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource290=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource291=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource292=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource293=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource294=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource295=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource296=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource297=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource298=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource299=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource300=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource301=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource302=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource303=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource304=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource305=IDD_SAVEWAVDLG (Unknown language: 0x3
+Resource306=IDD_NEW_VOLUME
+Resource307=IDD_PROGRESS_DIALOG
+Resource308=IDD_PSYBAR (Neutral (Default))
+Resource309=IDD_PSYBAR2 (Neutral (Default))
+Resource310=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource311=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource312=IDD_INFO (Neutral (Default))
+Resource313=IDD_WIREDIALOG (Neutral (Default))
+Resource314=IDD_GEARDISTORT (Neutral (Default))
+Resource315=IDD_MACPROP (Neutral (Default))
+Resource316=IDD_PATDLG (Neutral (Default))
+Resource317=IDD_INSTRUMENT (Neutral (Default))
+Resource318=IDD_GEAR_TRACKER (Neutral (Default))
+Resource319=IDD_GEAR_DELAY (Neutral (Default))
+Resource320=IDD_ENVDIALOG (Neutral (Default))
+Resource321=IDD_GEAR_FILTER (Neutral (Default))
+Resource322=IDD_GREETS (Neutral (Default))
+Resource323=IDD_SKIN (Neutral (Default))
+Resource324=IDD_SONGPROP (Neutral (Default))
+Resource325=IDD_GEAR_GAINER (Neutral (Default))
+Resource326=IDD_GEAR_FLANGER (Neutral (Default))
+Resource327=IDD_MASTERDLG (Neutral (Default))
+Resource328=IDD_NEWVAL (Neutral (Default))
+Resource329=IDD_VSTRACK (Neutral (Default))
+Resource330=IDD_PRESETS (Neutral (Default))
+Resource331=IDD_MIDI_MONITOR (Neutral (Default))
+Resource332=IDD_KEYCONFIG (Neutral (Default))
+Resource333=IDD_NEWMACHINE (Neutral (Default))
+Resource334=IDD_ABOUTBOX (Neutral (Default))
+Resource335=IDD_SEQUENCER (Neutral (Default))
+Resource336=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource337=IDD_OUTPUT (Neutral (Default))
+Resource338=IDD_DIRECTORIES (Neutral (Default))
+Resource339=IDD_CONFIGURATION (Neutral (Default))
+Resource340=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource341=IDD_INST_EDITOR (Neutral (Default))
+Resource342=IDD_MIDI_INPUT (Neutral (Default))
+Resource343=IDD_MIDI_LEARN (Neutral (Default))
+Resource344=IDD_SWINGFILL (Neutral (Default))
+Resource345=IDD_PORTAUDIO_ASIO_CONFIG (Neutral (Default))
+Resource346=IDD_GEAR_RACK (Neutral (Default))
+Resource347=IDR_MAINFRAME (Neutral (Default))
 
 [CLS:CChildView]
 Type=0
@@ -1189,7 +1270,7 @@ Control4=IDOK,button,1342242817
 [DLG:IDD_SKIN (Neutral (Default))]
 Type=1
 Class=?
-ControlCount=100
+ControlCount=101
 Control1=IDC_STATIC,button,1342177287
 Control2=IDC_STATIC,static,1342308352
 Control3=IDC_PATTERN_FONT_POINT,combobox,1344340226
@@ -1290,6 +1371,7 @@ Control97=IDC_DRAW_EMPTY_DATA,button,1342242819
 Control98=IDC_PATTERN_FONTFACE,button,1342242816
 Control99=IDC_MACHINE_FONTFACE,button,1342242816
 Control100=IDC_MACHINE_FONTFACE2,button,1342242816
+Control101=IDC_DRAW_MAC_INDEX,button,1342242819
 
 [DLG:IDD_SONGPROP (Neutral (Default))]
 Type=1
